refactor: attempt to remove grayscale svgs

--- a/styles.css
+++ b/styles.css
@@ -456,7 +456,8 @@ html, body {
 }
 
 .event__icon_temp {
-    background-image: url(assets/icon_temperature.svg);
+    background-image: url(assets/icon_temperature_2.svg);
+    filter: grayscale(1);
 }
 
 .event__icon_temp2 {
@@ -464,7 +465,8 @@ html, body {
 }
 
 .event__icon_light {
-    background-image: url(assets/icon_sun.svg);
+    background-image: url(assets/icon_sun_2.svg);
+    filter: grayscale(1);
 }
 
 .event__icon_light2 {
